# IsoSyntax

./: Iso.cabal  stack.yaml
app/: Main.hs
src/: Iso.hs  Lib.hs  Syntax.hs
src/Iso/: Lib.hs  Prim.hs  Syntax.hs  Util.hs
src/Syntax/: Combinator.hs  Constructors.hs  Lib.hs  TH.hs  Util.hs
