name:                Iso
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Iso#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Iso
  other-modules:       Iso.Lib
                     , Iso.Syntax
                     , Iso.Util
                     , Iso.Prim
  build-depends:       base >= 4.7 && < 5
                     , transformers
                     , containers
                     , mtl
  default-language:    Haskell2010
